--- a/card.css
+++ b/card.css
@@ -1,6 +1,48 @@
 .card{
     border: 1px solid #000000;
-    background-color: #FFFF00;
-    width: 268px;
-    height: 474px;
+    border-radius: 8px;
+    padding: 15px;
+    width: 250px;
+    background-color: #FFFF;
+    margin: 0px;
+}
+
+.card-star{
+    color: #fd931b;
+    font-size: 14px;
+    margin-bottom: 5px;
+    display: flex;
+}
+
+.card-image{
+   width: 100%;
+   height: auto;
+   margin-bottom: 10px;
+   justify-content: center;
+}
+
+.card-description{
+   font-size: 16px;
+   font-weight: 100;
+   margin-bottom: 10px;
+   color: #000000
+}
+
+.preço{
+    align-items: center;
+    block-size: auto;
+    display: flex;
+}
+
+.card-price{
+    align-items: center;
+}
+
+.card-parcelamento{
+    align-items: center;
+}
+
+.botão{
+    background-color: rgb(218, 78, 23);
+    
 }
