--- a/card.css
+++ b/card.css
@@ -11,7 +11,7 @@
     color: #fd931b;
     font-size: 14px;
     margin-bottom: 5px;
-    display: flex;
+    text-align: right;
 }
 
 .card-image{
@@ -19,6 +19,7 @@
    height: auto;
    margin-bottom: 10px;
    justify-content: center;
+   text-align: center;
 }
 
 .card-description{
@@ -31,7 +32,9 @@
 .preço{
     align-items: center;
     block-size: auto;
-    display: flex;
+    font-size: 30px;
+    color: #fd931b;
+   font-weight: bold;
 }
 
 .card-price{
@@ -40,9 +43,17 @@
 
 .card-parcelamento{
     align-items: center;
+    color: #666666;
+    font-size: 15px;
 }
+.parcelamento[
+    
+]
 
 .botão{
     background-color: rgb(218, 78, 23);
-    
+    color: #ffff;
+    border: #fd931b;
+    font-size: 40px;
+    text-align: center;
 }
