--- a/card.css
+++ b/card.css
@@ -46,13 +46,10 @@
     color: #666666;
     font-size: 15px;
 }
-.parcelamento[
-    
-]
 
 .botão{
-    background-color: rgb(218, 78, 23);
-    color: #ffff;
+    background-color: #fd931b;
+    color: #ffffff;
     border: #fd931b;
     font-size: 40px;
     text-align: center;
