--- a/card.css
+++ b/card.css
@@ -1,10 +1,18 @@
+body{
+    display: flex;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-block-start: 30px;
+}
+
 .card{
-    border: 1px solid #000000;
+    border: 1px solid #a5a5a5;
     border-radius: 8px;
     padding: 15px;
     width: 250px;
     background-color: #FFFF;
-    margin: 0px;
+    margin: 10px;
+
 }
 
 .card-star{
@@ -30,7 +38,8 @@
    font-size: 16px;
    font-weight: 100;
    margin-bottom: 10px;
-   color: #000000
+   color: #000000;
+   height: 100px;
 }
 
 .card-desconto{
