--- a/cabeçalho.css
+++ b/cabeçalho.css
@@ -7,12 +7,13 @@
 
 a{
  margin: 20px;
- 
+ font-size: 12px;
 }
 
 .cabeçalho-image{
     display: flex;
-    justify-content: center;
-    
+    justify-content: left;
+    margin-left: 180px;
+    margin-bottom: 25px;
 }
 
