--- a/cabeçalho.css
+++ b/cabeçalho.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0px;
+}
+
 .Cabeça{
     display: flex;
     background-color: rgb(179, 20, 20);
@@ -13,7 +17,7 @@ a{
 .cabeçalho-image{
     display: flex;
     justify-content: left;
-    margin-left: 180px;
+    margin-left: 190px;
     margin-bottom: 25px;
 }
 
